--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,38 @@
-div{
-    width: 100px;
-    height: 50px;
+
+.conteudo{
+    position: relative;
 }
 
-.azul{
-    background-color: blue;
+
+#image { 
+    position: fixed;
+    width: 100%;
+    height: 8%;
+    left: 0px;
+    top: 0px;
+    right: 0px;
 }
-.vermelho{
-    background: #FF0000;
+
+.logo {
+    position: relative;
 }
-.verde{
-    background: rgb(0,255,0);
+
+#bibliotaku {
+    width: 50%;
+}
+
+#menu {
+    position:fixed;
+    background: black;
+    color: aliceblue; 
+    width: 100%;
+    left:0px; 
+}
+
+#rodape {
+    width: 600px;
+    padding: 10px 2%;
+    background-color: #888888;
+    color: white;
+    text-align: center;
 }
