--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,8 +33,65 @@ header {
     background-color: black;
     color: aliceblue; 
     width: 100%;
+    height: 20px;
+}
+
+nav {
     padding-left: 10px;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
 
+li {
+    position: relative;
+    cursor: pointer;
+}
+  
+.book img {
+    width: 20px; /* Ajuste o tamanho conforme necessário */
+    height: auto;
+    margin-right: 5px;
+}
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.show-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.show-content a {
+    color: #fff;
+    padding: 12px 16px;
+    display: block;
+}
+
+.show-content a:hover {
+    color: #fff;
+    background-color: aqua;
+    width: auto;
+}
+
+.categorias:hover .show-content {
+    display: block;
+}
+
+.categorias img {
+    width: 10px;
+    position: relative;
+}
+
+.categorias {
+    left: 10px;
+}
