--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,11 +22,25 @@ header {
 .cabecalho_meio {
     width: 100%;
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .cabecalho_meio img {
     width: 30%;
-    height: 100px;
+    height: auto;
+}
+
+.texto_no_meio {
+    flex-grow: 1;
+    text-align: center;
+    color: black;
+}
+
+#naruto {
+    width: 50px;
+    margin-right: 50px;
 }
 
 .cabecalho_navegacao {
@@ -55,7 +69,8 @@ li {
 .book img {
     width: 20px; /* Ajuste o tamanho conforme necessário */
     height: auto;
-    margin-right: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 a {
@@ -69,6 +84,8 @@ a {
     background-color: #333;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    flex-direction: column;
+    margin-top: 5px;
 }
 
 .show-content a {
@@ -94,4 +111,24 @@ a {
 
 .categorias {
     left: 10px;
+}
+
+.categorias, .livros, .inicial {
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.livros img {
+    width: 10px;
+    position: relative;
+}
+
+.rodape {
+    width: 100%;
+    padding: 10px 2%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
 }
