:feat: sparkles: implementando jquery para esconder opções de pagamento

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -153,3 +153,11 @@ a {
     display: flex;
     justify-content: space-between;
 }
+
+.opcoes-pagamento {
+    display: none;
+}
+
+.opcoes-pagamento.visivel {
+    display: block;
+}
