:sparkles: feat: implementando jquery para pegar informações de seleção do usuário e começando a implementar a parte de adição de informações de pagamento

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -161,3 +161,10 @@ a {
 .opcoes-pagamento.visivel {
     display: block;
 }
+
+.produto-pagamento {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
