--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,7 +67,7 @@ li {
 }
   
 .book img {
-    width: 30px; /* Ajuste o tamanho conforme necessário */
+    width: 30px;
     height: auto;
     margin-right: 10px;
     margin-left: 10px;
@@ -127,7 +127,7 @@ a {
     background-color: black;
     color: white;
     text-align: center;
-    position: fixed;
+    position: static;
     bottom: 0;
 }
 
@@ -168,7 +168,7 @@ a {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-bottom: 250px;
+    padding-bottom: 150px;
 }
 
 .secao-pix, .secao-cartao {
@@ -179,8 +179,8 @@ a {
     border: 2px solid red;
 }
 
-.ok-cpf {
-    border: 2px solid green;
+.ok-cpf, .ok-input {
+    background-color:  green;
 }
 
 form {
@@ -204,10 +204,28 @@ select {
 }
 
 button {
-    background-color: #4caf50;
+    background-color: black;
     color: #fff;
     padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.bandeira-cartao img {
+    width: 30px;
+}
+
+#mastercardBandeira, #visaBandeira {
+    vertical-align: middle;
+    width: 50px;
+    display: none;
+}
+
+.erro-input {
+    background-color: red;
 }
