:recycle: refactor: tentando arrumar funcionamento da mensagem de pagamento final pós submit de confirmação de pagamento

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -229,3 +229,13 @@ button:hover {
 .erro-input {
     background-color: red;
 }
+
+.mensagem {
+    display: none;
+    color: green;
+    font-weight: bold;
+}
+
+#confirmaPagamento{
+    display: none;
+}
